# raidar

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  analyze-results.md  next-session.md
orchestrator/: .env.example  README.md  pyproject.toml
orchestrator/results/: 5e635587.json  929fa3b5.json  cdc46157.json
orchestrator/src/: cli.py  storage.py
orchestrator/tests/: __init__.py  conftest.py  test_claude_code_cli_adapter.py  test_cli_commands.py  test_cli_retry.py  test_compliance.py  test_config.py  test_fast_smoke_mode.py  test_gate_watcher.py  test_gemini_cli_adapter.py  test_hello_world_smoke_task.py  test_matrix.py  test_repeat_suite.py  test_runner_harbor_env_and_cleanup.py  test_runner_metrics.py  test_scorecard.py  test_session_parser.py  test_storage.py  test_visual_and_functional.py
orchestrator/workspace-diag-gemini-repeat-01/: scaffold.manifest.json
orchestrator/workspace-diag4-gemini-repeat-01/: scaffold.manifest.json
orchestrator/workspace-diag5-gemini-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-claude-final-check-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-claude-haiku-check2-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-claude-haiku-fast-check1-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-claude-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-claude-secret-check2-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-final-20260212-105046-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-fix2-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-secret-check2-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-secret-check3-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-gemini-working-check-repeat-01/: scaffold.manifest.json
orchestrator/workspace-smoke-hello-gemini-2-repeat-01/: scaffold.manifest.json
(+500 files in other folders)
